@@ -20,7 +20,7 @@ use TYPO3\CMS\Core\SingletonInterface;
 /**
  * Example hooks for the 'externalimport_tut' extension
  *
- * @author Francois Suter (Cobweb) <typo3@cobweb.ch>
+ * @author Francois Suter (Cobweb) <typo3@ideative.ch>
  * @package TYPO3
  * @subpackage tx_externalimporttut
  */
@@ -38,7 +38,7 @@ class ExternalImport implements SingletonInterface
     public function processBeforeInsert($record, $pObj): array
     {
         // Perform operation only for the fe_users table and for external index 0
-        if ($pObj->getExternalConfiguration()->getTable() === 'fe_users' && $pObj->getExternalConfiguration()->getIndex() == 0) {
+        if ($pObj->getExternalConfiguration()->getTable() === 'fe_users' && (int)$pObj->getExternalConfiguration()->getIndex() === 0) {
             // Simply reverse the username to create the password
             $record['password'] = strrev($record['username']);
         }
