@@ -19,7 +19,7 @@ use TYPO3\CMS\Core\SingletonInterface;
 /**
  * Example transformation functions for the 'externalimport_tut' extension
  *
- * @author Francois Suter (Cobweb) <typo3@cobweb.ch>
+ * @author Francois Suter (Cobweb) <typo3@ideative.ch>
  * @package TYPO3
  * @subpackage tx_externalimporttut
  */
