@@ -19,7 +19,7 @@
 	"version": "2.2.0",
 	"require": {
 		"typo3/cms-core": ">=9.5.0,<11.0",
-		"cobweb/external_import": "dev-bilby",
+		"cobweb/external_import": ">=4.3.0",
 		"cobweb/svconnector_csv": ">=2.3.0",
 		"cobweb/svconnector_feed": ">=2.3.0",
 		"georgringer/news": "^8"
