@@ -1,3 +1,7 @@
+2020-05-12 Francois Suter (Cobweb)  <typo3@ideative.ch>
+
+	* Ensure compatibility with TYPO3 10 LTS and updates to external_import and connector services, resolves #5
+
 2019-01-13 Francois Suter (Cobweb)  <typo3@cobweb.ch>
 
 	* Ensure compatibility with TYPO3 9 LTS, drop support for TYPO3 7
